--- a/src/app/heroes/listado/listado.component.html
+++ b/src/app/heroes/listado/listado.component.html
@@ -1,12 +1,16 @@
 <p>listado de heroes</p>
 
-<div *ngIf="heroeBorrado">
-  <h3>Héroe borrado</h3>
-  <span>{{ heroeBorrado }}</span>
+<div *ngIf="heroeBorrado; else noBorrado">
+    <h3>Héroe borrado</h3>
+    <span>{{ heroeBorrado }}</span>
 </div>
+
+<ng-template #noBorrado>
+    <h3>No ha borrado nada</h3>
+</ng-template>
 
 <button (click)="borrarHeroe()">borrar</button>
 
 <ul>
-  <li *ngFor="let heroe of heroes; let i = index">{{ i + 1 }} - {{ heroe }}</li>
+    <li *ngFor="let heroe of heroes; let i = index">{{ i + 1 }} - {{ heroe }}</li>
 </ul>
