--- a/src/app/dbz/main-page/main-page.component.html
+++ b/src/app/dbz/main-page/main-page.component.html
@@ -1,25 +1,15 @@
 <h1>Dragon ball Z</h1>
-<hr>
+<hr />
 
 <div class="row">
-    <div class="col">
-        <app-personajes [personajes]="personajes">
+  <div class="col">
+    <app-personajes [personajes]="personajes"> </app-personajes>
+  </div>
 
-        </app-personajes>
-
-    </div>
-
-    <div class="col">
-        <h3>Agregar</h3>
-        <hr>
-
-        <form action="" (ngSubmit)="agregar()">
-            <input type="text" placeholder="Nombre" name="nombre" [(ngModel)]="nuevo.nombre">
-
-            <input type="number " placeholder="Poder" name="poder" [(ngModel)]="nuevo.poder">
-
-            <button type="submit ">Agregar</button>
-        </form>
-    </div>
-
+  <div class="col">
+    <app-agregar
+      [nuevo]="nuevo"
+      (onNuevoPersonaje)="agregarNuevoPersonaje($event)"
+    ></app-agregar>
+  </div>
 </div>
